--- a/requirements.txt
+++ b/requirements.txt
@@ -29,18 +29,23 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.5.2
+Jinja2==3.1.5
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 kubernetes==32.0.0
 langchain-chroma==0.2.1
 langchain-core==0.3.33
+langchain-huggingface==0.1.2
 langchain-ollama==0.2.3
 langsmith==0.3.3
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 mdurl==0.1.2
 mmh3==5.1.0
 monotonic==1.6
 mpmath==1.3.0
+networkx==3.4.2
 numpy==1.26.4
 oauthlib==3.2.2
 ollama==0.4.7
@@ -58,6 +63,7 @@ opentelemetry-util-http==0.50b0
 orjson==3.10.15
 overrides==7.7.0
 packaging==24.2
+pillow==11.1.0
 posthog==3.11.0
 protobuf==5.29.3
 pyasn1==0.6.1
@@ -70,19 +76,28 @@ pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==13.9.4
 rsa==4.9
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.1
+sentence-transformers==3.4.1
+setuptools==75.8.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.45.3
-sympy==1.13.3
+sympy==1.13.1
 tenacity==9.0.0
+threadpoolctl==3.5.0
 tokenizers==0.21.0
+torch==2.6.0
 tqdm==4.67.1
+transformers==4.48.2
 typer==0.15.1
 typing_extensions==4.12.2
 urllib3==2.3.0
